# DocStorage

./: .gitignore  LICENSE  README.md  alembic.ini  docker-compose.yaml  docker-compose.yml  dockerfile  pyproject.toml  requirements.txt  server.py
alembic/: env.py
alembic/versions/: f0e2ef7638dd_created_user_entity.py
app/db/: base.py
app/dtos/: user_dtos.py
app/models/: user.py
app/routes/users/: __init__.py  create.py
docstorage-backend/: requirements.txt
docstorage-frontend/: package-lock.json  package.json  tailwind.config.js
docstorage-frontend/src/: App.tsx  index.tsx
docstorage-frontend/src/components/: AuthHeader.tsx  BetaBanner.tsx  Publication.tsx  StudentSidebar.tsx  TeacherInfoAlert.tsx  TeacherSidebar.tsx
docstorage-frontend/src/context/: Context.tsx
docstorage-frontend/src/models/: AuthInputsModels.tsx  PublicationModels.tsx  UserModels.tsx
docstorage-frontend/src/pages/: ConfrimEmailPage.tsx  CreatePublicationPage.tsx  LoginPage.tsx  PermissionDeniedPage.tsx  PublicationsPage.tsx  RegisterPage.tsx  StudentDashboardPage.tsx  TeacherDashboardPage.tsx
docstorage-frontend/src/routes/: ProtectedRoute.tsx  Router.tsx
docstorage-frontend/src/services/: AuthService.tsx  PublicationService.tsx
